# GLab

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
1975.Phong/: README.md
1977.Blinn-Phong/: README.md
1977.Blinn-Phong/code/: CMakeLists.txt
1977.Blinn-PhongShading/: README.md
1977.Blinn-PhongShading/code/: CMakeLists.txt  GLMesh.h  GLProgram.h  MyCamera.h  MyFileLoader.h  MyLight.h  MyMaterial.h  MyRenderer.cpp  MyRenderer.h  MyScene.cpp  MyScene.h  MySceneObject.h  main.cpp
1977.Crow-ShadowVolume/: README.md
1978.Williams-ShadowMapping/: README.md
1993.BSP/: MyNotes.xmind  README.md
1993.Naylor-BSP/: README.md
CPUCaches/: FalseSharing.cpp  MatrixTraversals.cpp  main.cpp
CPUCaches/CPUCaches/: FalseSharing.cpp  FalseSharing.hpp  MatrixTraversals.cpp  MatrixTraversals.hpp  main.cpp
CPUCaches/CPUCaches.xcodeproj/: project.pbxproj
CpuCaches/CpuCaches.xcodeproj/: project.pbxproj
CpuCaches/src/: FalseSharing.hpp  MatrixTraversals.hpp
ECSProfile/: CMakeLists.txt  DOD.cpp  DOD.h  ECSProfile.sln  ECSProfile.vcxproj  ECSProfile.vcxproj.filters  OOD.cpp  OOD.h  README.md  main.cpp
ECSProfile/ECSProfile.xcodeproj/: project.pbxproj
ECSProfile/ECSProfile.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ECSProfile/ECSProfile.xcodeproj/project.xcworkspace/xcuserdata/neil.xcuserdatad/: UserInterfaceState.xcuserstate
ECSProfile/ECSProfile.xcodeproj/xcuserdata/neil.xcuserdatad/xcschemes/: xcschememanagement.plist
ECSProfile/src/: DOD.cpp  DOD.h  OOD.cpp  OOD.h  main.cpp
GKit/: CMakeLists.txt  README.md
GKit/framework/: GApp.cpp  GApp.h  GException.h  GPipeline.h
MyFramework/: CMakeLists.txt
WeekendPathTracer/: Resource.h  WeekendPathTracer.cpp  WeekendPathTracer.rc  WeekendPathTracer.sln  WeekendPathTracer.vcxproj  WeekendPathTracer.vcxproj.filters  WinMain.cpp
WeekendPathTracer/Src/: MyLog.cpp  MyLog.h  MyPathTracer.cpp  MyPathTracer.h  MyWin32App.cpp  MyWin32App.h  SampleSceneA.cpp  SampleSceneA.h  SceneRayHitTest.h  Time.h  WindowSurface.cpp  WindowSurface.h
WeekendPathTracer/Src/World/: World.cpp  World.h
docs/: macos_setup.md
(+21 files in other folders)
